menu-customizer.css
/* ... */
#available-menu-items .menu-item-handle {
	cursor: pointer;
}

#available-menu-items .item-top,
#available-menu-items .item-top:hover {
	border: none;
	background: transparent;
	-webkit-box-shadow: none;
	box-shadow: none;
}

#available-menu-items .menu-item-handle {
	-webkit-box-shadow: none;
	box-shadow: none;
	margin-top: -1px;
}

#available-menu-items .item-title h4 {
	padding: 0 0 5px;
	font-size: 14px;
}

#available-menu-items a.item-add {
	font-size: 0;
	position: absolute;
	top: 0;
	left: 0;
	color: #555;
}

#available-menu-items .menu-item-handle:focus a.item-add,
#available-menu-items .menu-item-handle:hover a.item-add {
	color: #222;
}

#available-menu-items .item-add:before {
	content: "\f132";
	font: normal 20px/1 dashicons;
	position: absolute;
	left: 6px;
	top: 12px;
}

#customize-preview {
	-webkit-transition: all 0.2s;
	transition: all 0.2s;
}

body.adding-menu-items #available-menu-items {
	left: 0;
}

body.adding-menu-items .wp-full-overlay-main {
	left: 300px;
}

body.adding-menu-items #customize-preview {
	opacity: 0.4;
}

.nav-menu-inserted-item-loading .spinner {
	float: left;
	margin: 0 8px 0 0;
}

.nav-menu-inserted-item-loading .menu-item-handle .item-type {
	padding: 0 0 0 8px;
}


.nav-menu-inserted-item-loading .menu-item-handle,
.added-menu-item .menu-item-handle.loading {
	padding: 10px 15px 10px 8px;
	cursor: default;
	opacity: .5;
	background: #fff;
	color: #777;
}

.added-menu-item .menu-item-handle {
	transition-property: opacity, background, color;
	transition-duration: 1.25s;
	transition-timing-function: cubic-bezier( .25, -2.5, .75, 8 ); /* Replacement for .hide().fadeIn('slow') in JS to add emphasis when it's loaded. */
}

/* Add/delete Menus */
#accordion-section-add_menu .accordion-section-title {
	padding-left: 45px;
}

#accordion-section-add_menu .accordion-section-title:before {
	font: normal 20px/1 dashicons;
	position: absolute;
	top: 11px;
	left: 14px;
	content: "\f132";
}

#create-new-menu-submit {
	float: right;
	margin: 0 0 12px 0;
}

#toggle-menu-delete {
	float: right;
}

.menu-delete {
	display: none;
}

.menu-delete:before {
	font: normal 20px/1 dashicons;
	content: "\f158";
	position: absolute;
	top: 11px;
	right: 9px;
	color: #a00;
}

.menu-delete:focus:before,
.menu-delete:hover:before {
	color: #f00;
}

.deleting-menus .menu-delete {
	display: block;
}

.deleting-menus .accordion-section-title:after {
	display: none;
}

/* Displayed while the menu-deletion ajax is processing. */
#customize-theme-controls .accordion-section.deleting .accordion-section-title {
	background: #a00;
	color: #fff;
}

#customize-theme-controls .deleting-menus .accordion-section-title {
	transition: .18s background ease-in-out;
}

#customize-theme-controls .accordion-section.deleting .menu-delete {
	display: none;
}

.deleting-menus #toggle-menu-delete {
	background: #eee;
	border-color: #999;
	color: #333;
	-webkit-box-shadow: inset 0 2px 5px -3px rgba(0, 0, 0, 0.5);
	box-shadow: inset 0 2px 5px -3px rgba(0, 0, 0, 0.5);
}

.deleting-menus #toggle-menu-delete:before {
	content: "\f132";
	display: inline-block;
	position: relative;
	left: -2px;
	top: -1px;
	font: normal 20px/1 'dashicons';
	vertical-align: middle;
	-webkit-transition: all 0.2s;
	transition: all 0.2s;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-transform: rotate(45deg);
	-ms-transform: rotate(45deg);
	transform: rotate(45deg);
}

/* Media queries */
@media screen and (max-height: 700px) and (min-width: 981px) {
	.menu-item-handle {
		-webkit-box-shadow: none;
		box-shadow: none;
		margin-top: -1px;
	}
	.menu-item-handle:hover {
		position: relative;
		z-index: 1;
	}
	.customize-control-nav_menu {
		margin-top: 12px;
	}
	.customize-control input.menu-name-field {
		margin-bottom: 12px;
	}
}

